--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		
 	</head>
 	
-	<title>XRF output converter</title>
+	<title>TEST output converter</title>
 	<body >		
 	
 		<div class="grauerBlock">
